--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Mendel''s law'
 - !lcsh 'Life (Biology)'
 - !lcsh 'Biology'
+- GITenberg
 title: The Organism as a Whole, from a Physicochemical Viewpoint
 url: http://www.gutenberg.org/ebooks/45962
